# cdumay_error_base64

./: Cargo.toml  README.md
src/: lib.rs  macros.rs
tests/: base64_error.rs  test_base64_error.rs  test_macros.rs
