[package]
name = "cdumay_error_base64"
version = "0.1.3"
edition = "2024"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library for base64 error"
documentation = "https://docs.rs/cdumay_error_base64"
homepage = "https://github.com/cdumay/cdumay_error_base64"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_error_base64"

[dependencies]
base64 = "0.22"
cdumay_error = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
